added flush confidence messages in dump

--- a/app/templates/app/dump.html
+++ b/app/templates/app/dump.html
@@ -11,5 +11,6 @@
 <p><a href="{% url 'dump' 'codesnippet' %}">Dump codesnippet</a></p>
 <p><a href="{% url 'dump' 'session' %}">Dump session</a></p>
 <p><a href="{% url 'dump' 'showsession' %}">Show session</a></p>
-<p><a href="{% url 'dump' 'flush' %}">flush</a></p>
+<p><a href="{% url 'dump' 'flushsession' %}">flush session</a></p>
+<p><a href="{% url 'dump' 'flushmessage' %}">flush message</a></p>
 
