--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="footer">
                         <hr>
-                        <footer>
+                        <footer id="footer-div">
                             {% if session_count %}
                                 Number of users online: {{ session_count }}
                             {% endif %}
