--- a/app/templates/admin/quiz_results_detail.html
+++ b/app/templates/admin/quiz_results_detail.html
@@ -76,6 +76,7 @@
 	var ping_interval = 1000
 	setInterval(function() {
 		$("#quiz-results-div").load(" #quiz-results-div", function() {$(this).children().unwrap()});
+		$("#footer-div").load(" #footer-div", function() {$(this).children().unwrap()});
 	}, ping_interval);
 </script>
 {% endblock %}
