added reset confidencemeter in dump

--- a/app/templates/app/dump.html
+++ b/app/templates/app/dump.html
@@ -13,4 +13,5 @@
 <p><a href="{% url 'dump' 'showsession' %}">Show session</a></p>
 <p><a href="{% url 'dump' 'flushsession' %}">flush session</a></p>
 <p><a href="{% url 'dump' 'flushmessage' %}">flush message</a></p>
+<p><a href="{% url 'dump' 'resetconfidence' %}">reset confidence</a></p>
 
